[project]
name = "flask-nobot"
version = "1.0.0"
description = "Lightweight, zero-dependency bot protection for Flask applications."
readme = "README.md"
authors = [
    {name = "TN3W", email = "tn3w@protonmail.com"}
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.8"
dependencies = ["flask>=2.0"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]
keywords = [
    "flask", "middleware", "bot", "bot-detection", "challenge",
    "captcha", "security", "access-control", "signed-cookie",
    "bot-challenge", "anti-bot",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/tn3w/flask-nobot"
Repository = "https://github.com/tn3w/flask-nobot.git"
Issues = "https://github.com/tn3w/flask-nobot/issues"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["flask_nobot"]

[tool.setuptools.package-data]
flask_nobot = ["challenge.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=flask_nobot --cov-report=term-missing --cov-fail-under=100 -v"